fixed z-index bug with contentForward bool

--- a/css/layout.css
+++ b/css/layout.css
@@ -85,7 +85,7 @@ body {
   height: 69.7%;
   transform: translate(-50%, 0);
   overflow-y: scroll;
-  overflow-x: visible;
+  overflow-x: scroll;
   scrollbar-base-color: #140517;
   scrollbar-face-color: #00cc00;
   scrollbar-3dlight-color: #00cc00;
@@ -172,6 +172,7 @@ body {
   padding: 15px 5px 15px 5px;
   background-color: rgba(0, 0, 0, .8);
   font-size: 16px;
+  word-break: break-all;
   color: #e6e6e6;
   font-family: 'Rubik', sans-serif;
   margin: 5px 0 40px 0;
